Refactor pricing section: glassmorphism style, updated content and structure

--- a/index.html
+++ b/index.html
@@ -612,139 +612,210 @@
         </div>
     </section>
 
-    <!-- PRICING (NEW REPLACEMENT) -->
+    <!-- PRICING (V2 - REFRESHED) -->
     <section class="section" id="pricing" style="position: relative; overflow: hidden;">
-        <!-- Background Glow for Section -->
-        <div class="glow-spot" style="top: 20%; left: 50%; transform: translateX(-50%); opacity: 0.3;"></div>
-
         <div class="container">
             <h2 class="text-center mb-60">ТАРИФЫ И ГАРАНТИИ</h2>
 
             <div class="pricing-grid">
-                <!-- TIER 1 -->
-                <div class="price-card glass-panel">
-                    <h3>AI-ФИЛЬТР</h3>
-                    <div class="price-num">9 000 000 <span
-                            style="font-size: 16px; font-weight: 400; color: var(--text-muted);">UZS</span></div>
-                    <p class="mb-20" style="font-size: 14px;">Для старта и фильтрации спама.</p>
-                    <ul class="price-list gold-checks">
-                        <!-- ACTIVE: BLOCK C -->
-                        <li class="list-category">AI-СИСТЕМА И АВТОМАТИЗАЦИЯ</li>
-                        <li>Внедрение квалифицирующего чат-бота (Ig/Tg)</li>
-                        <li>Глубокий анализ продукта и скриптов продаж</li>
-                        <li>Индивидуальные сценарии квалификации лидов</li>
-                        <li>Интеллектуальный скоринг и сбор контактов 24/7</li>
-                        <li>Связка с CRM (Bitrix/Amo) и Google Sheets</li>
+                <!-- TIER 1: AI-FILTER -->
+                <div class="price-card-v2">
+                    <div class="p-top-label">Тариф</div>
+                    <div class="price-header-box">
+                        <h3>AI-ФИЛЬТР</h3>
+                    </div>
+                    <p class="p-sub-desc">Система для автоматизации первичных коммуникаций и квалификации входящего
+                        трафика.</p>
 
-                        <!-- INACTIVE: BLOCK A & B -->
-                        <li class="list-category unavailable">СТРАТЕГИЯ И УПРАВЛЕНИЕ</li>
-                        <li class="unavailable">Интерактивный BI-Dashboard аналитики продаж</li>
-                        <li class="unavailable">Формирование фин. и опер. планов для отдела продаж</li>
-                        <li class="unavailable">Разработка жестких регламентов и скриптов для менеджеров</li>
-                        <li class="unavailable">Глубокий аудит отдела маркетинга и всех активностей</li>
-
-                        <li class="list-category unavailable">РЕКЛАМА И ТРАФИК</li>
-                        <li class="unavailable">Комплексный аудит текущей рекламы и поиск точек роста</li>
-                        <li class="unavailable">Стратегия захвата рынка (JTBD)</li>
-                        <li class="unavailable">Разработка баннеров: Дизайн + Продающий текст</li>
-                        <li class="unavailable">Запуск и управление рекламой (Meta Ads)</li>
+                    <div class="p-section-title">AI-СИСТЕМА</div>
+                    <ul class="p-features-list">
+                        <li>AI-бот для квалификации обращений</li>
+                        <li>Сценарии диалогов под ваш продукт</li>
+                        <li>Скоринг и фильтрация лидов</li>
+                        <li>Автоматический сбор контактов</li>
                     </ul>
-                    <a href="#lead-form" class="btn"
-                        style="background: transparent; border: 1px solid var(--accent); color: var(--accent); width: 100%;">ВНЕДРИТЬ
-                        СИСТЕМУ</a>
-                </div>
 
-                <!-- TIER 2 (POPULAR) -->
-                <div class="price-card glass-panel popular">
-                    <div class="sticker-badge guarantee">
-                        <span class="sticker-text">ГАРАНТИЯ</span>
-                    </div>
-                    <h3>СИСТЕМА ПЕРЕЛИДОЗА</h3>
-                    <div class="price-num">12 000 000 <span
-                            style="font-size: 16px; font-weight: 400; color: var(--text-muted);">UZS</span></div>
-                    <p class="mb-20" style="font-size: 14px;">Комплексное решение "под ключ".</p>
-                    <ul class="price-list gold-checks">
-                        <!-- ACTIVE: BLOCK B & C -->
-                        <li class="list-category">РЕКЛАМА И ТРАФИК</li>
-                        <li>Комплексный аудит текущей рекламы и поиск точек роста</li>
-                        <li>Стратегия захвата рынка (JTBD)</li>
-                        <li>Разработка баннеров: Дизайн + Продающий текст</li>
-                        <li>Запуск и управление рекламой (Meta Ads)</li>
-
-                        <li class="list-category">AI-СИСТЕМА И АВТОМАТИЗАЦИЯ</li>
-                        <li>Внедрение квалифицирующего чат-бота (Ig/Tg)</li>
-                        <li>Глубокий анализ продукта и скриптов продаж</li>
-                        <li>Индивидуальные сценарии квалификации лидов</li>
-                        <li>Интеллектуальный скоринг и сбор контактов 24/7</li>
-                        <li>Связка с CRM (Bitrix/Amo) и Google Sheets</li>
-
-                        <!-- INACTIVE: BLOCK A -->
-                        <li class="list-category unavailable">СТРАТЕГИЯ И УПРАВЛЕНИЕ</li>
-                        <li class="unavailable">Интерактивный BI-Dashboard аналитики продаж</li>
-                        <li class="unavailable">Формирование фин. и опер. планов для отдела продаж</li>
-                        <li class="unavailable">Разработка жестких регламентов и скриптов для менеджеров</li>
-                        <li class="unavailable">Глубокий аудит отдела маркетинга и всех активностей</li>
+                    <div class="p-section-title">ИНТЕГРАЦИЯ</div>
+                    <ul class="p-features-list">
+                        <li>Интеграция с CRM или Google Sheets</li>
+                        <li>Автоматическая передача заявок менеджерам</li>
                     </ul>
-                    <a href="#lead-form" class="btn"
-                        style="width: 100%; box-shadow: 0 0 20px rgba(250, 193, 77, 0.4);">ВНЕДРИТЬ СИСТЕМУ</a>
-                </div>
 
-                <!-- TIER 3 -->
-                <div class="price-card glass-panel">
-                    <div class="sticker-badge guarantee">
-                        <span class="sticker-text">ГАРАНТИЯ</span>
-                    </div>
-                    <h3>МАСШТАБ И КОНТРОЛЬ</h3>
-                    <div class="price-num">24 000 000 <span
-                            style="font-size: 16px; font-weight: 400; color: var(--text-muted);">UZS</span></div>
-                    <p class="mb-20" style="font-size: 14px;">Для крупных отделов продаж.</p>
-                    <ul class="price-list gold-checks">
-                        <!-- ACTIVE: ALL BLOCKS -->
-                        <li class="list-category">СТРАТЕГИЯ И УПРАВЛЕНИЕ</li>
-                        <li>Интерактивный BI-Dashboard аналитики продаж</li>
-                        <li>Формирование фин. и опер. планов для отдела продаж</li>
-                        <li>Разработка жестких регламентов и скриптов для менеджеров</li>
-                        <li>Глубокий аудит отдела маркетинга и всех активностей</li>
-
-                        <li class="list-category">РЕКЛАМА И ТРАФИК</li>
-                        <li>Комплексный аудит текущей рекламы и поиск точек роста</li>
-                        <li>Стратегия захвата рынка (JTBD)</li>
-                        <li>Разработка баннеров: Дизайн + Продающий текст</li>
-                        <li>Запуск и управление рекламой (Meta Ads)</li>
-
-                        <li class="list-category">AI-СИСТЕМА И АВТОМАТИЗАЦИЯ</li>
-                        <li>Внедрение квалифицирующего чат-бота (Ig/Tg)</li>
-                        <li>Глубокий анализ продукта и скриптов продаж</li>
-                        <li>Индивидуальные сценарии квалификации лидов</li>
-                        <li>Интеллектуальный скоринг и сбор контактов 24/7</li>
-                        <li>Связка с CRM (Bitrix/Amo) и Google Sheets</li>
+                    <div class="p-section-title">СТРАТЕГИЯ</div>
+                    <ul class="p-features-list">
+                        <li class="inactive">Маркетинговая стратегия привлечения клиентов</li>
+                        <li class="inactive">Аудит текущего маркетинга</li>
+                        <li class="inactive">Медиаплан и прогноз заявок</li>
                     </ul>
-                    <a href="#footer" class="btn" style="background: #fff; color: #000; width: 100%;">ВНЕДРИТЬ
-                        СИСТЕМУ</a>
-                </div>
-            </div>
 
-            <!-- GUARANTEE TRIAD -->
-            <div class="guarantee-triple-bar glass-panel mt-60">
-                <div class="g-item">
-                    <div class="g-icon">⚡️</div>
-                    <div class="g-content">
-                        <div class="g-title">СКОРОСТЬ</div>
-                        <div class="g-desc">Запуск за 14 дней. Не успеем — месяц ведения бесплатно.</div>
+                    <div class="p-section-title">РЕКЛАМА</div>
+                    <ul class="p-features-list">
+                        <li class="inactive">Разработка рекламных креативов</li>
+                        <li class="inactive">Написание продающих текстов</li>
+                        <li class="inactive">Запуск и ведение рекламой</li>
+                        <li class="inactive">Оптимизация стоимости заявки</li>
+                    </ul>
+
+                    <div class="p-section-title">АНАЛИТИКА И УПРАВЛЕНИЕ</div>
+                    <ul class="p-features-list">
+                        <li class="inactive">BI-дашборд</li>
+                        <li class="inactive">Финансовый план маркетинга</li>
+                        <li class="inactive">Регламенты и скрипты для отдела продаж</li>
+                        <li class="inactive">Консалтинг по росту</li>
+                    </ul>
+
+                    <div class="p-section-title">ГАРАНТИИ</div>
+                    <ul class="p-features-list">
+                        <li>Бесперебойная обработка заявок</li>
+                        <li class="inactive">Гарантия результата по заявкам</li>
+                        <li class="inactive">Контроль стоимости лида</li>
+                        <li class="inactive">Прозрачная отчетность</li>
+                    </ul>
+
+                    <div class="p-price-block">
+                        <div class="p-current-price">9 000 000/мес</div>
+                    </div>
+
+                    <a href="#lead-form" class="btn-buy"
+                        style="display: block; text-align: center; text-decoration: none;">ВНЕДРИТЬ</a>
+
+                    <div class="p-card-footer">
+                        <div class="p-trust-badge">🔒 100% безопасная сделка</div>
                     </div>
                 </div>
-                <div class="g-item">
-                    <div class="g-icon">💎</div>
-                    <div class="g-content">
-                        <div class="g-title">КАЧЕСТВО</div>
-                        <div class="g-desc">Минимум 20% конверсия в лида. Или перенастройка за наш счет.</div>
+
+                <!-- TIER 2: SYSTEM (POPULAR) -->
+                <div class="price-card-v2 popular">
+                    <div class="sticker-pop">САМЫЙ ПОПУЛЯРНЫЙ</div>
+                    <div class="p-top-label">Тариф</div>
+                    <div class="price-header-box">
+                        <h3>СИСТЕМА</h3>
+                    </div>
+                    <p class="p-sub-desc">Комплексное маркетинговое решение: от стратегии и рекламы до автоматизации
+                        продаж.</p>
+
+                    <div class="p-section-title">СТРАТЕГИЯ</div>
+                    <ul class="p-features-list">
+                        <li>Маркетинговая стратегия привлечения клиентов</li>
+                        <li>Аудит текущего маркетинга</li>
+                        <li>Медиаплан и прогноз заявок</li>
+                    </ul>
+
+                    <div class="p-section-title">РЕКЛАМА</div>
+                    <ul class="p-features-list">
+                        <li>Разработка рекламных креативов</li>
+                        <li>Написание продающих текстов</li>
+                        <li>Запуск и ведение рекламы (Meta Ads)</li>
+                        <li>Оптимизация стоимости заявки</li>
+                    </ul>
+
+                    <div class="p-section-title">AI-СИСТЕМА</div>
+                    <ul class="p-features-list">
+                        <li>AI-бот для квалификации обращений</li>
+                        <li>Сценарии диалогов под ваш продукт</li>
+                        <li>Скоринг и фильтрация лидов</li>
+                        <li>Автоматический сбор контактов</li>
+                    </ul>
+
+                    <div class="p-section-title">ИНТЕГРАЦИЯ</div>
+                    <ul class="p-features-list">
+                        <li>Интеграция с CRM или Google Sheets</li>
+                        <li>Автоматическая передача заявок</li>
+                    </ul>
+
+                    <div class="p-section-title">АНАЛИТИКА И УПРАВЛЕНИЕ</div>
+                    <ul class="p-features-list">
+                        <li>BI-дашборд (базовый)</li>
+                        <li class="inactive">Финансовый план маркетинга</li>
+                        <li class="inactive">Регламенты и скрипты</li>
+                        <li class="inactive">Консалтинг по росту</li>
+                    </ul>
+
+                    <div class="p-section-title">ГАРАНТИИ</div>
+                    <ul class="p-features-list">
+                        <li>Бесперебойная обработка заявок</li>
+                        <li>Гарантия результата по заявкам</li>
+                        <li>Контроль стоимости лида</li>
+                        <li>Прозрачная отчетность</li>
+                    </ul>
+
+                    <div class="p-price-block">
+                        <div class="p-current-price">12 000 000/мес</div>
+                        <div class="p-monthly-sub">без рекламного бюджета</div>
+                    </div>
+
+                    <a href="#lead-form" class="btn-buy"
+                        style="display: block; text-align: center; text-decoration: none;">ВНЕДРИТЬ</a>
+
+                    <div class="p-card-footer">
+                        <div class="p-trust-badge">🔒 100% безопасная сделка</div>
                     </div>
                 </div>
-                <div class="g-item">
-                    <div class="g-icon">🤝</div>
-                    <div class="g-content">
-                        <div class="g-title">РЕЗУЛЬТАТ</div>
-                        <div class="g-desc">Повышаем конверсию либо работаем бесплатно до результата</div>
+
+                <!-- TIER 3: SCALE -->
+                <div class="price-card-v2">
+                    <div class="p-top-label">Тариф</div>
+                    <div class="price-header-box">
+                        <h3>МАСШТАБ</h3>
+                    </div>
+                    <p class="p-sub-desc">Для лидеров рынка: построение полностью управляемой системы и агрессивное
+                        масштабирование прибыли.</p>
+
+                    <div class="p-section-title">АНАЛИТИКА И УПРАВЛЕНИЕ</div>
+                    <ul class="p-features-list">
+                        <li>BI-дашборд с ключевыми показателями</li>
+                        <li>Финансовый план маркетинга</li>
+                        <li>Регламенты и скрипты для отдела продаж</li>
+                        <li>Консалтинг по росту</li>
+                    </ul>
+
+                    <div class="p-section-title">СТРАТЕГИЯ</div>
+                    <ul class="p-features-list">
+                        <li>Маркетинговая стратегия привлечения клиентов</li>
+                        <li>Аудит текущего маркетинга</li>
+                        <li>Медиаплан и прогноз заявок</li>
+                    </ul>
+
+                    <div class="p-section-title">РЕКЛАМА</div>
+                    <ul class="p-features-list">
+                        <li>Разработка рекламных креативов</li>
+                        <li>Написание продающих текстов</li>
+                        <li>Запуск и ведение рекламы</li>
+                        <li>Оптимизация стоимости заявки</li>
+                    </ul>
+
+                    <div class="p-section-title">AI-СИСТЕМА</div>
+                    <ul class="p-features-list">
+                        <li>AI-бот для квалификации обращений</li>
+                        <li>Сценарии диалогов под ваш продукт</li>
+                        <li>Скоринг и фильтрация лидов</li>
+                        <li>Автоматический сбор контактов</li>
+                    </ul>
+
+                    <div class="p-section-title">ИНТЕГРАЦИЯ</div>
+                    <ul class="p-features-list">
+                        <li>Интеграция с CRM</li>
+                        <li>Автоматическая передача заявок</li>
+                    </ul>
+
+                    <div class="p-section-title">ГАРАНТИИ</div>
+                    <ul class="p-features-list">
+                        <li>Гарантия результата по заявкам</li>
+                        <li>Контроль стоимости лида</li>
+                        <li>Прозрачная отчетность</li>
+                        <li>Приоритетная поддержка</li>
+                    </ul>
+
+                    <div class="p-price-block">
+                        <div class="p-current-price">24 000 000/мес</div>
+                        <div class="p-monthly-sub">без рекламного бюджета</div>
+                    </div>
+
+                    <a href="#lead-form" class="btn-buy"
+                        style="display: block; text-align: center; text-decoration: none;">ВНЕДРИТЬ</a>
+
+                    <div class="p-card-footer">
+                        <div class="p-trust-badge">🔒 100% безопасная сделка</div>
                     </div>
                 </div>
             </div>
