Update FAQ (Uzbek support, formatting) and hide calculator

--- a/index.html
+++ b/index.html
@@ -589,14 +589,13 @@
     </section>
 
     <!-- CALCULATOR -->
+    <!-- 
     <section id="calculator" class="section">
         <div class="container">
             <h2 class="text-center mb-60">ПОСЧИТАЙ СВОЮ ВЫГОДУ С LOOPS</h2>
 
             <div class="calc-card">
-                <!-- Left: Inputs -->
                 <div class="calc-inputs">
-                    <!-- Input 1: Budget -->
                     <div class="calc-group">
                         <label>
                             <span>💰 Сколько тратите на рекламу в месяц ($)?</span>
@@ -605,7 +604,6 @@
                         <input type="range" id="input-budget" min="100" max="10000" step="100" value="1000">
                     </div>
 
-                    <!-- Input 2: Clients -->
                     <div class="calc-group">
                         <label>
                             <span>👥 Сколько клиентов получаете сейчас (чел)?</span>
@@ -615,7 +613,6 @@
                     </div>
                 </div>
 
-                <!-- Right: Result -->
                 <div class="calc-result">
                     <p class="text-muted mb-20" style="font-size: 14px;">Ваша ежемесячная выгода:</p>
                     <div id="calc-total" class="calc-total-num">+$1,300</div>
@@ -628,6 +625,7 @@
             </div>
         </div>
     </section>
+    -->
 
     <!-- PRICING (V2 - REFRESHED) -->
     <section class="section" id="pricing" style="position: relative; overflow: hidden;">
@@ -846,32 +844,99 @@
 
             <div class="faq-list">
                 <details class="faq-item">
-                    <summary class="faq-question">Почему так дорого?</summary>
+                    <summary class="faq-question">Понимает ли система узбекский язык?</summary>
                     <div class="faq-answer">
-                        Вы покупаете не просто "чат-бота", а готовый бизнес-процесс. Один этот бот заменяет двух
-                        менеджеров с зарплатой по 5–7 млн сум. Посчитайте экономию ФОТ за полгода — и вы поймете, что
-                        система стоит дешево.
+                        <p>Да, наш ИИ-агент полностью двуязычен и свободно переключается между русским и узбекским
+                            языками в зависимости от того, на каком языке обратился клиент.</p>
+                        <p style="margin-top: 10px;"><strong>Текстовые сообщения:</strong> ИИ понимает литературный
+                            узбекский и кириллицу/латиницу. Он грамотно консультирует и ведет клиента по воронке продаж.
+                        </p>
+                        <p style="margin-top: 10px;"><strong>Голосовые сообщения:</strong> Система отлично распознает
+                            чистую речь. Однако, учитывая обилие локальных диалектов, мы настроили ИИ максимально
+                            этично:</p>
+                        <p style="margin-top: 5px;">Если агент не уверен, что правильно распознал смысл сложного
+                            диалекта в «голосовом», он не будет придумывать ответ. Он честно напишет, что не совсем
+                            понял сообщение, и вежливо попросит клиента повторить мысль или продублировать её текстом.
+                        </p>
                     </div>
                 </details>
                 <details class="faq-item">
-                    <summary class="faq-question">Подойдет ли это для моей ниши?</summary>
+                    <summary class="faq-question">Для кого подойдет эта система?</summary>
                     <div class="faq-answer">
-                        Это работает везде, где есть общение перед продажей (недвижимость, авто, медицина, кухни,
-                        услуги). Если вы продаете чехлы на телефон за 10к сум — вам это не нужно.
+                        <p>Наша система создана для бизнесов, где результат зависит от качества коммуникации и скорости
+                            ответа:</p>
+                        <ul style="margin-top: 10px; padding-left: 20px;">
+                            <li><strong>High-ticket услуги:</strong> Стоматологии, автодилеры, агентства недвижимости.
+                                Бот перехватывает заявку за 1 секунду и ведет диалог до момента записи на визит.</li>
+                            <li><strong>Сложный B2B и ОПТ:</strong> Производство и дистрибуция. ИИ-агент сам проводит
+                                скоринг, выясняет бюджет и выводит менеджера только на ЛПР.</li>
+                            <li><strong>Компании с отделом продаж:</strong> Чтобы ваши сотрудники не выгорали на
+                                «холодном» прозвоне и не тратили время на мусорные заявки.</li>
+                            <li><strong>Бизнесы в стадии масштабирования:</strong> Когда нужно обрабатывать в 5-10 раз
+                                больше лидов без найма новых людей и раздувания ФОТ.</li>
+                        </ul>
                     </div>
                 </details>
                 <details class="faq-item">
-                    <summary class="faq-question">Как быстро я увижу результат?</summary>
+                    <summary class="faq-question">У меня нет CRM и в продажах полный хаос. Это поможет?</summary>
                     <div class="faq-answer">
-                        Техническая сборка занимает до 14 дней. Первые целевые заявки (а не просто клики) пойдут в день
-                        запуска трафика.
+                        <p>Это именно та причина, по которой стоит начать. В рамках проекта мы:</p>
+                        <ul style="margin-top: 10px; padding-left: 20px;">
+                            <li>Выстраиваем архитектуру и логику ваших продаж.</li>
+                            <li>Внедряем и настраиваем CRM-систему с нуля.</li>
+                            <li>Подключаем телефонию и обучаем менеджеров работать по новой системе.</li>
+                            <li>Сначала наводим порядок, и только потом запускаем трафик.</li>
+                        </ul>
                     </div>
                 </details>
                 <details class="faq-item">
-                    <summary class="faq-question">Что, если у меня нет CRM?</summary>
+                    <summary class="faq-question">Подойдет ли это конкретно для моей ниши?</summary>
                     <div class="faq-answer">
-                        В тариф Setup входит построение архитектуры: мы сами настроим вам CRM, подключим телефонию и
-                        научим менеджеров работать. Мы наводим порядок, прежде чем пустить трафик.
+                        Система универсальна для любой сферы, где перед продажей требуется общение (консультация,
+                        расчет, замер). Если ваш продукт нельзя купить «в один клик» без участия человека — ИИ-агент
+                        станет вашим лучшим сотрудником.
+                    </div>
+                </details>
+                <details class="faq-item">
+                    <summary class="faq-question">Как быстро я увижу первые результаты?</summary>
+                    <div class="faq-answer">
+                        <p>До 14 дней занимает полная техническая сборка, прописание скриптов и интеграция.</p>
+                        <p>В день запуска трафика вы начинаете получать первые целевые заявки, которые уже прошли
+                            квалификацию ботом.</p>
+                    </div>
+                </details>
+                <details class="faq-item">
+                    <summary class="faq-question">Чем ваш ИИ-агент отличается от обычного чат-бота за $200?</summary>
+                    <div class="faq-answer">
+                        Обычный бот — это просто линейное дерево с кнопками «Нажми меня». Наш ИИ-сотрудник — это
+                        нейросеть, обученная по вашим скриптам и продуктам. Он понимает свободный текст, «считывает»
+                        интонацию клиента и может ответить на любой нестандартный вопрос, ведя диалог к нужной цели —
+                        продаже или записи на встречу.
+                    </div>
+                </details>
+                <details class="faq-item">
+                    <summary class="faq-question">Не напугает ли клиентов общение с нейросетью?</summary>
+                    <div class="faq-answer">
+                        ИИ-агент общается вежливо, грамотно и в «живом» формате. Большинство пользователей даже не
+                        замечают, что им отвечает программа, потому что диалог выглядит как переписка с очень быстрым и
+                        внимательным ассистентом.
+                    </div>
+                </details>
+                <details class="faq-item">
+                    <summary class="faq-question">Как ИИ может знать мой продукт и цены?</summary>
+                    <div class="faq-answer">
+                        <p>Представьте, что вы нанимаете лучшего менеджера и даете ему папку со всей информацией о
+                            компании. Мы делаем то же самое с нейросетью:</p>
+                        <ul style="margin-top: 10px; padding-left: 20px;">
+                            <li><strong>Загружаем ваши данные:</strong> прайс-лист, описание услуг, условия доставки и
+                                даже файлы с техническими характеристиками.</li>
+                            <li><strong>Передаем ваш опыт:</strong> мы анализируем ваши лучшие переписки с клиентами и
+                                внедряем в ИИ те самые фразы и аргументы, которые реально закрывают сделки.</li>
+                            <li><strong>Ставим цель:</strong> сначала узнать потребность, потом отработать возражения и
+                                в итоге — закрыть клиента на встречу или оплату.</li>
+                        </ul>
+                        <p>Бот не берет ответы «из головы». Он отвечает именно так, как ответил бы ваш самый опытный
+                            сотрудник, только делает это мгновенно и 24/7.</p>
                     </div>
                 </details>
             </div>
