--- a/cases/index.html
+++ b/cases/index.html
@@ -17,7 +17,8 @@
         ym(106627787, 'init', { ssr: true, webvisor: true, clickmap: true, ecommerce: "dataLayer", referrer: document.referrer, url: location.href, accurateTrackBounce: true, trackLinks: true });
     </script>
     <noscript>
-        <div><img src="https://mc.yandex.ru/watch/106627787" style="position:absolute; left:-9999px;" alt="" /></div>
+        <div style="display:none;"><img src="https://mc.yandex.ru/watch/106627787"
+                style="position:absolute; left:-9999px; display:none;" alt="" /></div>
     </noscript>
     <!-- /Yandex.Metrika counter -->
 
