--- a/cases/case-bts/index.html
+++ b/cases/case-bts/index.html
@@ -192,23 +192,7 @@
                             <p>Мы не стали накручивать подписчиков. Мы запустили <strong>систему прямых продаж</strong>
                                 с первого дня.</p>
 
-                            <!-- Step 1 -->
-                            <div
-                                style="background: rgba(255,255,255,0.03); border: 1px solid rgba(250,193,77,0.2); border-radius: 16px; padding: 30px; margin: 25px 0;">
-                                <h4 style="color: var(--accent); margin-bottom: 15px;">🎬 ВИЗУАЛЬНАЯ УПАКОВКА</h4>
-                                <p style="margin-bottom: 15px;">Сделали контент, который показывает «магию» пересчёта
-                                    денег:</p>
-                                <ul class="gold-list">
-                                    <li><strong>ASMR-видео</strong> — машинка быстро считает пачки купюр (залипательно!)
-                                    </li>
-                                    <li><strong>Демо работы</strong> — распознавание фальшивок в реальном времени</li>
-                                    <li><strong>Сравнение</strong> — ручной подсчёт vs машина (3 минуты vs 10 секунд)
-                                    </li>
-                                </ul>
-                                <p style="color: var(--text-muted); font-size: 14px; margin-top: 15px;">
-                                    Это привлекает внимание бизнеса: обменники, кассиры, бухгалтеры.
-                                </p>
-                            </div>
+
 
                             <!-- Step 2 -->
                             <div
@@ -234,66 +218,77 @@
                             <!-- Chat Demo -->
                             <div
                                 style="background: linear-gradient(135deg, rgba(30,40,60,0.8), rgba(20,30,50,0.9)); border: 1px solid rgba(200,180,100,0.2); border-radius: 20px; padding: 30px; margin: 40px 0;">
-                                <h4 style="text-align: center; margin-bottom: 25px; color: #fff;">💬 Как бот продаёт
-                                    сложную технику</h4>
+                                <h4 style="text-align: center; margin-bottom: 25px; color: #fff;">💬 Реальный диалог с
+                                    AI-агентом</h4>
 
-                                <div style="max-width: 400px; margin: 0 auto;">
+                                <div style="max-width: 450px; margin: 0 auto;">
                                     <!-- Client message -->
                                     <div style="display: flex; justify-content: flex-start; margin-bottom: 12px;">
                                         <div
-                                            style="background: rgba(255,255,255,0.1); padding: 12px 16px; border-radius: 18px 18px 18px 4px; max-width: 80%;">
-                                            Здравствуйте, цена на DORS 800?
+                                            style="background: rgba(255,255,255,0.1); padding: 12px 16px; border-radius: 18px 18px 18px 4px; max-width: 85%;">
+                                            Здравствуйте! Можно узнать об этом подробнее?
                                         </div>
                                     </div>
 
-                                    <!-- Bot message (gold/steel accent) -->
+                                    <!-- Bot message -->
                                     <div style="display: flex; justify-content: flex-end; margin-bottom: 12px;">
                                         <div
-                                            style="background: linear-gradient(135deg, #5a6272, #3d4654); border: 1px solid rgba(200,180,100,0.3); padding: 12px 16px; border-radius: 18px 18px 4px 18px; max-width: 80%;">
-                                            Здравствуйте! 👋 Это профессиональный сортировщик. Вы подбираете для
-                                            обменного пункта, кассы или банка?
+                                            style="background: linear-gradient(135deg, #0d4a5a, #0a3a48); border: 1px solid rgba(0,150,180,0.3); padding: 12px 16px; border-radius: 18px 18px 4px 18px; max-width: 85%;">
+                                            Здравствуйте! 👋 Вас приветствует команда BTS Group. Поможем подобрать
+                                            оборудование DORS и HITACHI для проверки подлинности, счёта или сортировки
+                                            банкнот.
+                                        </div>
+                                    </div>
+
+                                    <!-- Bot continues -->
+                                    <div style="display: flex; justify-content: flex-end; margin-bottom: 12px;">
+                                        <div
+                                            style="background: linear-gradient(135deg, #0d4a5a, #0a3a48); border: 1px solid rgba(0,150,180,0.3); padding: 12px 16px; border-radius: 18px 18px 4px 18px; max-width: 85%;">
+                                            Для уточнения, скажите: вам нужен счетчик или детектор? И для чего — для
+                                            магазина, аптеки, банка или личного использования? Также укажите примерный
+                                            объём.
                                         </div>
                                     </div>
 
                                     <!-- Client -->
                                     <div style="display: flex; justify-content: flex-start; margin-bottom: 12px;">
                                         <div
-                                            style="background: rgba(255,255,255,0.1); padding: 12px 16px; border-radius: 18px 18px 18px 4px; max-width: 80%;">
-                                            Для обменника
+                                            style="background: rgba(255,255,255,0.1); padding: 12px 16px; border-radius: 18px 18px 18px 4px; max-width: 85%;">
+                                            Счетчик, для личного использования
                                         </div>
                                     </div>
 
-                                    <!-- Bot -->
+                                    <!-- Bot recommendation -->
                                     <div style="display: flex; justify-content: flex-end; margin-bottom: 12px;">
                                         <div
-                                            style="background: linear-gradient(135deg, #5a6272, #3d4654); border: 1px solid rgba(200,180,100,0.3); padding: 12px 16px; border-radius: 18px 18px 4px 18px; max-width: 80%;">
-                                            Отлично! DORS 800 распознаёт 9 валют и отсеивает фальшивки по 9 признакам.
-                                            Какие валюты нужны?
+                                            style="background: linear-gradient(135deg, #0d4a5a, #0a3a48); border: 1px solid rgba(0,150,180,0.3); padding: 12px 16px; border-radius: 18px 18px 4px 18px; max-width: 85%;">
+                                            Спасибо! Для личного использования рекомендуем DORS CT-1040U — базовый
+                                            счетчик банкнот. Цена от 895 000 сум. Оставьте номер телефона для связи с
+                                            менеджером.
                                         </div>
                                     </div>
 
-                                    <!-- Client -->
+                                    <!-- Client phone -->
                                     <div style="display: flex; justify-content: flex-start; margin-bottom: 12px;">
                                         <div
-                                            style="background: rgba(255,255,255,0.1); padding: 12px 16px; border-radius: 18px 18px 18px 4px; max-width: 80%;">
-                                            Доллары, евро, сумы. И старые доллары тоже
+                                            style="background: rgba(255,255,255,0.1); padding: 12px 16px; border-radius: 18px 18px 18px 4px; max-width: 85%;">
+                                            77 010 8966
                                         </div>
                                     </div>
 
                                     <!-- Bot final -->
                                     <div style="display: flex; justify-content: flex-end; margin-bottom: 12px;">
                                         <div
-                                            style="background: linear-gradient(135deg, #5a6272, #3d4654); border: 1px solid rgba(200,180,100,0.3); padding: 12px 16px; border-radius: 18px 18px 4px 18px; max-width: 80%;">
-                                            ПО обновлено под новые и ветхие купюры ✅ Напишите номер — отправим КП и
-                                            видео работы
+                                            style="background: linear-gradient(135deg, #0d4a5a, #0a3a48); border: 1px solid rgba(0,150,180,0.3); padding: 12px 16px; border-radius: 18px 18px 4px 18px; max-width: 85%;">
+                                            Спасибо! Передал заявку менеджеру. ✅
                                         </div>
                                     </div>
                                 </div>
 
                                 <p
                                     style="text-align: center; font-size: 14px; color: var(--text-muted); margin-top: 20px; border-top: 1px solid rgba(200,180,100,0.2); padding-top: 20px;">
-                                    💡 Бот показал <strong>экспертность</strong> (знание валют, датчиков) и убедил
-                                    клиента оставить контакт
+                                    💡 Бот квалифицирует клиента, рекомендует модель с ценой и собирает контакт —
+                                    <strong>без участия менеджера</strong>
                                 </p>
                             </div>
                         </div>
@@ -305,13 +300,39 @@
                                 <h2 style="margin: 0; font-size: 32px;">РЕЗУЛЬТАТЫ ЗА 30 ДНЕЙ</h2>
                             </div>
 
+                            <!-- Funnel Visual -->
+                            <div
+                                style="background: rgba(255,255,255,0.03); border: 1px solid rgba(250,193,77,0.15); border-radius: 20px; padding: 30px; margin: 30px 0;">
+                                <div
+                                    style="display: flex; align-items: center; justify-content: center; gap: 20px; flex-wrap: wrap;">
+                                    <div style="text-align: center;">
+                                        <div style="font-size: 48px; font-weight: 800; color: #fff;">1000</div>
+                                        <div style="font-size: 14px; color: var(--text-muted);">Обращений</div>
+                                    </div>
+                                    <div style="font-size: 32px; color: var(--accent);">→</div>
+                                    <div style="text-align: center;">
+                                        <div style="font-size: 48px; font-weight: 800; color: #fff;">100</div>
+                                        <div style="font-size: 14px; color: var(--text-muted);">Заявок</div>
+                                    </div>
+                                    <div style="font-size: 32px; color: var(--accent);">→</div>
+                                    <div style="text-align: center;">
+                                        <div style="font-size: 48px; font-weight: 800; color: var(--accent);">58</div>
+                                        <div style="font-size: 14px; color: var(--text-muted);">Целевых B2B</div>
+                                    </div>
+                                </div>
+                                <p
+                                    style="text-align: center; margin-top: 20px; font-size: 14px; color: var(--text-muted);">
+                                    AI-агент отфильтровал 90% нецелевых обращений
+                                </p>
+                            </div>
+
                             <!-- Big Numbers Bento Grid -->
                             <div
                                 style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 20px; margin: 30px 0;">
                                 <div
                                     style="background: rgba(255,255,255,0.03); border: 1px solid rgba(250,193,77,0.15); border-radius: 16px; padding: 30px; text-align: center;">
                                     <div style="font-size: 14px; color: var(--text-muted); margin-bottom: 10px;">
-                                        ПОТРАЧЕНО</div>
+                                        БЮДЖЕТ</div>
                                     <div style="font-size: 42px; font-weight: 800; color: #fff;">$400</div>
                                     <div style="font-size: 12px; color: var(--text-muted);">минимальный тест</div>
                                 </div>
@@ -320,7 +341,7 @@
                                     <div style="font-size: 14px; color: var(--text-muted); margin-bottom: 10px;">ЗАЯВОК
                                     </div>
                                     <div style="font-size: 42px; font-weight: 800; color: #fff;">100</div>
-                                    <div style="font-size: 12px; color: var(--text-muted);">получено</div>
+                                    <div style="font-size: 12px; color: var(--text-muted);">из 1000 обращений</div>
                                 </div>
                                 <div
                                     style="background: rgba(255,255,255,0.03); border: 1px solid rgba(250,193,77,0.15); border-radius: 16px; padding: 30px; text-align: center;">
