SEO: Add landing pages, unify domain, add LocalBusiness schema
- Add /target/ landing page for targeted advertising SEO
- Add /ai-bot/ landing page for AI chatbot SEO
- Unify all URLs to agent.loops.uz domain
- Add LocalBusiness schema with Tashkent location
- Remove case-rebar (placeholder content)
- Update sitemap.xml with new pages

--- a/cases/case-viamed/index.html
+++ b/cases/case-viamed/index.html
@@ -28,11 +28,11 @@
         content="Кейс: Как мы запустили новую генетическую клинику с нуля и получили 150 пациентов в первый месяц через систему 'таргет + AI-агент'.">
     <meta name="keywords"
         content="медицинский маркетинг, продвижение клиники, кейс медицина, AI в медицине, автоматизация клиники, CRM для клиники">
-    <link rel="canonical" href="https://loops.uz/cases/case-viamed">
+    <link rel="canonical" href="https://agent.loops.uz/cases/case-viamed">
 
     <!-- Open Graph -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://loops.uz/cases/case-viamed">
+    <meta property="og:url" content="https://agent.loops.uz/cases/case-viamed">
     <meta property="og:title" content="Кейс: Клиника ViaMed | 150 Пациентов в Месяц">
     <meta property="og:description"
         content="Как получить 150 пациентов в новую клинику за первый месяц. Читать кейс внедрения LOOPS.">
