--- a/cases/index.html
+++ b/cases/index.html
@@ -29,15 +29,15 @@
         content="Кейсы внедрения Системы Перелидоза: автобизнес, недвижимость, B2B. Только цифры и факты: ROI, CPL, Выручка.">
     <meta name="keywords"
         content="кейсы маркетинга, примеры автоворонок, результаты внедрения ИИ, кейсы таргет, loops результаты">
-    <link rel="canonical" href="https://loops.uz/cases">
+    <link rel="canonical" href="https://agent.loops.uz/cases">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://loops.uz/cases">
+    <meta property="og:url" content="https://agent.loops.uz/cases">
     <meta property="og:title" content="Архив Результатов | Кейсы LOOPS">
     <meta property="og:description"
         content="Как наши клиенты делают X3 к выручке с помощью ИИ и таргета. Читайте подробные разборы.">
-    <meta property="og:image" content="https://loops.uz/images/og-cases.jpg">
+    <meta property="og:image" content="https://agent.loops.uz/images/og-cases.jpg">
 
     <link rel="icon" href="/images/favicon.jpg" type="image/jpeg">
     <link rel="stylesheet" href="/css/style.css">
