--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
         content="Автоматизация и управление отделом продаж. Глубокая стратегия, скрипты и ИИ-агенты для квалификации лидов 24/7. Внедрение системы Перелидоза под ключ.">
     <meta name="keywords"
         content="Автоматизация продаж, ИИ-агент, чат-бот для бизнеса, квалификация лидов, таргетированная реклама, автоворонка, внедрение CRM, искусственный интеллект в продажах, Система Перелидоза, Loops System, увеличение конверсии, продажи для недвижимости, автобизнес">
-    <link rel="canonical" href="https://loops.uz/">
+    <link rel="canonical" href="https://agent.loops.uz/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://loops.uz/">
+    <meta property="og:url" content="https://agent.loops.uz/">
     <meta property="og:title" content="Система Перелидоза | Таргет + ИИ Бот">
     <meta property="og:description"
         content="Получайте теплые заявки 24/7. Бот сам квалифицирует лидов и продает, пока ваши менеджеры спят.">
-    <meta property="og:image" content="https://loops.uz/images/og-main.jpg">
+    <meta property="og:image" content="https://agent.loops.uz/images/og-main.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://loops.uz/">
+    <meta property="twitter:url" content="https://agent.loops.uz/">
     <meta property="twitter:title" content="Система Перелидоза | Таргет + ИИ Бот">
     <meta property="twitter:description" content="Получайте теплые заявки 24/7. Бот сам квалифицирует лидов и продает.">
-    <meta property="twitter:image" content="https://loops.uz/images/og-main.jpg">
+    <meta property="twitter:image" content="https://agent.loops.uz/images/og-main.jpg">
 
     <link rel="icon" href="/images/favicon.jpg" type="image/jpeg">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -55,8 +55,8 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "Loops System",
-      "url": "https://loops.uz/",
-      "logo": "https://loops.uz/images/og-main.jpg",
+      "url": "https://agent.loops.uz/",
+      "logo": "https://agent.loops.uz/images/og-main.jpg",
       "description": "Автоматизация продаж с помощью ИИ-агентов и таргетированной рекламы.",
       "sameAs": [
         "https://t.me/dani_gzv",
@@ -69,12 +69,57 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Loops System",
-      "url": "https://loops.uz/",
+      "url": "https://agent.loops.uz/",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://loops.uz/articles?q={search_term_string}",
+        "target": "https://agent.loops.uz/articles?q={search_term_string}",
         "query-input": "required name=search_term_string"
       }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Loops System — Система Перелидоза",
+      "description": "Автоматизация продаж и маркетинга с помощью ИИ-агентов. Таргетированная реклама, чат-боты для бизнеса, внедрение CRM.",
+      "url": "https://agent.loops.uz/",
+      "logo": "https://agent.loops.uz/images/og-main.jpg",
+      "image": "https://agent.loops.uz/images/og-main.jpg",
+      "telephone": "+998 90 001 23 73",
+      "email": "info@loops.uz",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Ташкент",
+        "addressRegion": "Ташкент",
+        "addressCountry": "UZ"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "41.2995",
+        "longitude": "69.2401"
+      },
+      "areaServed": [
+        {
+          "@type": "Country",
+          "name": "Узбекистан"
+        },
+        {
+          "@type": "Country", 
+          "name": "Казахстан"
+        }
+      ],
+      "priceRange": "$$",
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+        "opens": "09:00",
+        "closes": "18:00"
+      },
+      "sameAs": [
+        "https://t.me/dani_gzv",
+        "https://www.instagram.com/danii_gzv/"
+      ]
     }
     </script>
 </head>
