feat: добавлена FAQ Schema для расширенных сниппетов Google

--- a/index.html
+++ b/index.html
@@ -122,6 +122,78 @@
       ]
     }
     </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "Понимает ли система узбекский язык?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Да, наш ИИ-агент полностью двуязычен и свободно переключается между русским и узбекским языками в зависимости от того, на каком языке обратился клиент. Текстовые сообщения: ИИ понимает литературный узбекский и кириллицу/латиницу. Голосовые сообщения: Система отлично распознает чистую речь."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Для кого подойдет эта система?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Наша система создана для бизнесов, где результат зависит от качества коммуникации: High-ticket услуги (стоматологии, автодилеры, агентства недвижимости), сложный B2B и ОПТ, компании с отделом продаж, бизнесы в стадии масштабирования."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "У меня нет CRM и в продажах полный хаос. Это поможет?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Это именно та причина, по которой стоит начать. В рамках проекта мы выстраиваем архитектуру и логику ваших продаж, внедряем и настраиваем CRM-систему с нуля, подключаем телефонию и обучаем менеджеров работать по новой системе."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Подойдет ли это конкретно для моей ниши?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Система универсальна для любой сферы, где перед продажей требуется общение (консультация, расчет, замер). Если ваш продукт нельзя купить «в один клик» без участия человека — ИИ-агент станет вашим лучшим сотрудником."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Как быстро я увижу первые результаты?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "До 14 дней занимает полная техническая сборка, прописание скриптов и интеграция. В день запуска трафика вы начинаете получать первые целевые заявки, которые уже прошли квалификацию ботом."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Чем ваш ИИ-агент отличается от обычного чат-бота за $200?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Обычный бот — это просто линейное дерево с кнопками. Наш ИИ-сотрудник — это нейросеть, обученная по вашим скриптам и продуктам. Он понимает свободный текст, «считывает» интонацию клиента и может ответить на любой нестандартный вопрос."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Не напугает ли клиентов общение с нейросетью?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "ИИ-агент общается вежливо, грамотно и в «живом» формате. Большинство пользователей даже не замечают, что им отвечает программа, потому что диалог выглядит как переписка с очень быстрым и внимательным ассистентом."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Как ИИ может знать мой продукт и цены?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Мы загружаем ваши данные: прайс-лист, описание услуг, условия доставки. Передаем ваш опыт: анализируем ваши лучшие переписки с клиентами и внедряем в ИИ те самые фразы и аргументы, которые реально закрывают сделки."
+          }
+        }
+      ]
+    }
+    </script>
 </head>
 
 <body>
